# ansible-collection-posit-team

./: .gitignore  CLAUDE.md  Justfile  README.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements.yml
meta/: runtime.yml
playbooks/: inventory.example.ini  posit-team.yml  requirements.yml
playbooks/group_vars/: all.yml  connect.yml  package_manager.yml  workbench.yml
roles/discover_runtimes/defaults/: main.yml
roles/discover_runtimes/meta/: main.yml
roles/discover_runtimes/tasks/: main.yml
roles/install/defaults/: main.yml
roles/install/meta/: main.yml
roles/install/tasks/: install_cdn.yml  install_cloudsmith.yml  main.yml
roles/license/defaults/: main.yml
roles/license/meta/: main.yml
roles/license/tasks/: main.yml
roles/ppm_bootstrap/defaults/: main.yml
roles/ppm_bootstrap/meta/: main.yml
roles/ppm_bootstrap/tasks/: main.yml
roles/python/defaults/: main.yml
roles/python/meta/: main.yml
roles/python/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/python/tasks/: install_python.yml  install_uv.yml  main.yml  set_default.yml
roles/r/defaults/: main.yml
roles/r/meta/: main.yml
roles/r/molecule/default/: converge.yml  prepare.yml  verify.yml
roles/r/tasks/: configure_redhat.yml  install_debian.yml  install_redhat.yml  install_suse.yml  main.yml  set_default.yml
roles/r/vars/: debian.yml  redhat.yml  suse.yml
roles/service/defaults/: main.yml
roles/service/meta/: main.yml
roles/service/tasks/: main.yml
